examples/test/testpolicy6903.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6903
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key9: value47
      key6: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value44
          key36: value48
          key33: value39
      podSelector:
        matchLabels:
          key44: value36
          key13: value31
